syntax = "proto3";
option go_package = ".;animation";

message AnimationArg {
    uint32 duration = 1;
    uint32 animation_id = 2;
    uint32 color_id = 3;
    uint32 speed = 4;
    uint32 brightness = 5;
}

message IdleAnimationArg {
    uint32 animation_id = 2;
    uint32 color_id = 3;
    uint32 speed = 4;
    uint32 brightness = 5;
}